[tool.poetry]
name = "python08-ex1-loading"
version = "0.1.0"
description = "Matrix data analysis demo for python08 exercise 01"
authors = ["koito"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
